remove my app id

--- a/public/intercomupdate.html
+++ b/public/intercomupdate.html
@@ -10,7 +10,7 @@
   <button onclick='updateURL()'>Update PATH</button>
 
 <script>
-var APP_ID = "asg9hiwx";
+var APP_ID = "YOUR_APP_ID";
 
 window.intercomSettings = {
     app_id: APP_ID,
